Training QoL improvements
 - include project in wandb
 - include model name in wandb and HF
 - log the training config
 - if a training job has been going for 24h just assume it died.
